# AudioVisualizer

./: .dockerignore  .gitignore  Dockerfile  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json
.github/workflows/: build-and-upload-video.yml  lint-and-typecheck.yml  secure-build.yml
audio_processing/: .gitignore  README.md  pyproject.toml  requirements.txt
audio_processing/src/: analyze_midi.py  main.py  output.json  output.midi
audio_processing/src/audio2midi/: audio_to_text.py  generate_midi_with_lyrics.py  midi_utils.py  note_utils.py  pitch_extraction.py
audio_processing/src/audio2midi.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
audio_processing/src/audio_processing.egg-info/: PKG-INFO  SOURCES.txt
audio_processing/tests/: test_pitch_extraction.py  whisper_test.py
node/: .gitignore  Dockerfile  eslint.config.js  package-lock.json  package.json
node/scripts/: build-video.cjs
node/src/: index.ts
node/src/__tests__/: example.test.js
python/: requirements.txt
python/src/: whisper_test.py
src/: index.ts
